<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout android:id="@+id/hcreate_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView android:id="@+id/hcreate_main_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/margin_medium_vertical"
            android:text="@string/hcreate_main_label"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/text_default"/>
        
        <LinearLayout android:id="@+id/hcreate_name_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hcreate_main_label"
            android:orientation="horizontal"
            android:weightSum="1">
            
            <TextView android:id="@+id/hcreate_name_section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginBottom="@dimen/margin_small_vertical"
                android:layout_marginLeft="@dimen/margin_small_horizontal"
                android:layout_marginRight="@dimen/margin_small_horizontal"
                android:gravity="center_vertical"
                android:text="@string/hcreate_label_name"
                android:textColor="@android:color/primary_text_dark"/>
            
            <EditText android:id="@+id/hcreate_name_section_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:inputType="text"
                android:hint="@string/hcreate_edit_hint_name"/>
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/hcreate_class_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hcreate_name_section"
            android:orientation="horizontal"
            android:weightSum="1">
            
            <TextView android:id="@+id/hcreate_class_section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginBottom="@dimen/margin_small_vertical"
                android:layout_marginLeft="@dimen/margin_small_horizontal"
                android:layout_marginRight="@dimen/margin_small_horizontal"
                android:gravity="center_vertical"
                android:text="@string/hcreate_label_class"
                android:textColor="@android:color/primary_text_dark"/>
            
            <EditText android:id="@+id/hcreate_class_section_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:inputType="text"
                android:hint="@string/hcreate_edit_hint_class"/>
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/hcreate_subject_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_vertical"
            android:layout_below="@id/hcreate_class_section"
            android:orientation="horizontal"
            android:weightSum="1">
            
            <TextView android:id="@+id/hcreate_subject_section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginBottom="@dimen/margin_small_vertical"
                android:layout_marginLeft="@dimen/margin_small_horizontal"
                android:layout_marginRight="@dimen/margin_small_horizontal"
                android:gravity="center_vertical"
                android:text="@string/hcreate_label_subject"
                android:textColor="@android:color/primary_text_dark"/>
            
            <EditText android:id="@+id/hcreate_subject_section_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:inputType="text"
                android:hint="@string/hcreate_edit_hint_subject"/>
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/hcreate_assigned_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_vertical"
            android:layout_below="@id/hcreate_subject_section"
            android:orientation="horizontal"
            android:weightSum="1">
            
            <TextView android:id="@+id/hcreate_assigned_section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginBottom="@dimen/margin_small_vertical"
                android:layout_marginLeft="@dimen/margin_small_horizontal"
                android:layout_marginRight="@dimen/margin_small_horizontal"
                android:gravity="center_vertical"
                android:text="@string/hcreate_label_assigned"
                android:textColor="@android:color/primary_text_dark"/>
            
            <Button android:id="@+id/hcreate_assigned_section_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:onClick="pickDate"
                android:text="@string/hcreate_main_choice"/>
            
            <EditText android:id="@+id/hcreate_assigned_section_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="date"
                android:hint="@string/hcreate_edit_hint_date"/>
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/hcreate_due_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hcreate_assigned_section"
            android:orientation="horizontal"
            android:weightSum="1">
            
            <TextView android:id="@+id/hcreate_due_section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginBottom="@dimen/margin_small_vertical"
                android:layout_marginLeft="@dimen/margin_small_horizontal"
                android:layout_marginRight="@dimen/margin_small_horizontal"
                android:gravity="center_vertical"
                android:text="@string/hcreate_label_due"
                android:textColor="@android:color/primary_text_dark"/>
            
            <Button android:id="@+id/hcreate_due_section_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:onClick="pickDate"
                android:text="@string/hcreate_main_choice"/>
            
            <EditText android:id="@+id/hcreate_due_section_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="date"
                android:hint="@string/hcreate_edit_hint_date"/>
                        
        </LinearLayout>
        
        <TextView android:id="@+id/hcreate_main_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_vertical"
            android:layout_marginBottom="@dimen/margin_small_vertical"
            android:layout_marginLeft="@dimen/margin_small_horizontal"
            android:layout_marginRight="@dimen/margin_small_horizontal"
            android:layout_below="@id/hcreate_due_section"
            android:text="@string/hcreate_main_label_keywords"
            android:textColor="@android:color/primary_text_dark"/>
        
        <EditText android:id="@+id/hcreate_main_keywords_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_vertical"
            android:layout_marginBottom="@dimen/margin_large_vertical"
            android:layout_marginLeft="@dimen/margin_small_horizontal"
            android:layout_marginRight="@dimen/margin_small_horizontal"
            android:layout_below="@id/hcreate_main_keywords"
            android:inputType="textMultiLine"
            android:hint="@string/hcreate_edit_hint_keywords"/>
        
        <Button android:id="@+id/hcreate_main_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hcreate_main_keywords_edit"
            android:layout_centerHorizontal="true"
            android:onClick="submitHomeworkCreateData"
            android:text="@string/hcreate_main_submit"
            android:textColor="@android:color/primary_text_dark"/>
        
    </RelativeLayout>

</ScrollView>
